--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "sudo PORT=443 HTTPS=true react-scripts start",
+    "start": "sudo PORT=443 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
